--- a/server/resource/lang/ar.json
+++ b/server/resource/lang/ar.json
@@ -315,7 +315,7 @@
                 "userLoginRequired": "تسجيل دخول المستخدم (مطلوب)",
                 "userRegistration": "تسجيل المستخدم",
                 "tableDataInitFail": "فشل في تهيئة بيانات الجدول"
-            ,"batchshowEmsOtherApi":"batchOtherApi","updateshowEmsOtherApi":"updateOtherApi","findshowEmsOtherApi":"findOtherApi","listshowEmsOtherApi":"listOtherApi","addshowEmsOtherApi":"addOtherApi","deleteshowEmsOtherApi":"deleteOtherApi"},
+            ,"batchshowEmsOtherApi":"batchOtherApi","updateshowEmsOtherApi":"updateOtherApi","findshowEmsOtherApi":"findOtherApi","listshowEmsOtherApi":"listOtherApi","addshowEmsOtherApi":"addOtherApi","deleteshowEmsOtherApi":"deleteOtherApi","addshowEmsFaultCode":"add故障码","deleteshowEmsFaultCode":"delete故障码","batchshowEmsFaultCode":"batch故障码","updateshowEmsFaultCode":"update故障码","findshowEmsFaultCode":"find故障码","listshowEmsFaultCode":"list故障码","updateshowEmsSerialPortManagement":"update串口","findshowEmsSerialPortManagement":"find串口","listshowEmsSerialPortManagement":"list串口","addshowEmsSerialPortManagement":"add串口","deleteshowEmsSerialPortManagement":"delete串口","batchshowEmsSerialPortManagement":"batch串口","updateshowEmsNetworkPortManagement":"update网口管理","findshowEmsNetworkPortManagement":"find网口管理","listshowEmsNetworkPortManagement":"list网口管理","addshowEmsNetworkPortManagement":"add网口管理","deleteshowEmsNetworkPortManagement":"delete网口管理","batchshowEmsNetworkPortManagement":"batch网口管理","deleteshowEmsDITable":"delete接口信息","batchshowEmsDITable":"batch接口信息","updateshowEmsDITable":"update接口信息","findshowEmsDITable":"find接口信息","listshowEmsDITable":"list接口信息","addshowEmsDITable":"add接口信息","listshowEmsOperationSetting":"listDO设置","addshowEmsOperationSetting":"addDO设置","deleteshowEmsOperationSetting":"deleteDO设置","batchshowEmsOperationSetting":"batchDO设置","updateshowEmsOperationSetting":"updateDO设置","findshowEmsOperationSetting":"findDO设置"},
             "group": {
                 "announcement": "الإعلان",
                 "api": "API",
@@ -343,7 +343,7 @@
                 "systemUser": "مستخدم النظام",
                 "tableTemplate": "قالب الجدول",
                 "templateConfiguration": "تكوين القالب"
-            ,"showEmsOtherApi":"OtherApi"}
+            ,"showEmsOtherApi":"OtherApi","showEmsFaultCode":"故障码","showEmsSerialPortManagement":"串口管理","showEmsNetworkPortManagement":"网口管理","showEmsDITable":"DI状态","showEmsOperationSetting":"DO设置"}
         },
         "authority": {
             "normalUserSubRole": "عادي المستخدم subrole",
@@ -410,8 +410,10 @@
             "website": "الموقع الرسمي",
             "buttonKey": "مفتاح الزر",
             "buttonComment": "تعليق الزر",
-            "menuID": "معرف القائمة"
-        ,"showEmsOtherApi":"OtherApi"}
+            "menuID": "معرف القائمة",
+            "showEmsOtherApi":"OtherApi",
+            "showEmssystemMangage":"系统管理",
+            "showEmsHistoryMangage":"历史数据","showEmsFaultCode":"故障码","showEmsSerialPortManagement":"串口管理","showEmsNetworkPortManager":"网口管理","showEmsNetworkPortManagement":"网口管理","showEmsDITable":"DI状态","showEmsOperationSetting":"DO设置"}
     },
     "announcement": {
         "publicAnnouncementAPI": "معلومات واجهة الإعلان التي لا تتطلب مصادقة",
